# ds-precommit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
examples/: .pre-commit-config.yaml
src/ds_precommit_hooks/: cli.py
src/ds_precommit_hooks/hooks/: large_file_blocker.py  simple_secret_scan.py  strip_notebook_outputs.py
tests/: conftest.py  test_large_file_blocker.py  test_secret_scan.py  test_strip_notebook.py
